# DesignPattern

./: CMakeLists.txt  README.md
AbstractFactory/: CMakeLists.txt  Player.h  README.md  main.cpp
AbstractFactory/Converter/: FileConverter.h  Mp4Converter.h  RmvbConverter.h
AbstractFactory/Factory/: IFactory.h  Mp4Factory.h  RmvbFactory.h
AbstractFactory/Parser/: FileParser.h  Mp4Parser.h  RmvbParser.h
AbstractFactory/Reader/: FileReader.h  Mp4Reader.h  RmvbReader.h
Factory/: CMakeLists.txt  PhoneMaker.h  README.md  main.cpp
Factory/Factory/: HonerFactory.h  IFactory.h  MeizuFactory.h
Factory/Phone/: HonerPhone.h  ISmartPhone.h  MeizuPhone.h
Singleton/: CMakeLists.txt  README.md  Singleton.cpp  Singleton.h  main.cpp
